fix: add letter spacing

--- a/packages/styles/_generated/base/_semantic.scss
+++ b/packages/styles/_generated/base/_semantic.scss
@@ -115,7 +115,7 @@
   --pine-dimension-lg: var(--pine-dimension-400);
   --pine-dimension-xl: var(--pine-dimension-500);
   --pine-dimension-2xl: var(--pine-dimension-600);
-  --pine-letter-spacing: -0.16px;
+  --pine-letter-spacing: var(--pine-letter-spacing-114) * -1;
   --pine-letter-spacing-heading-1: var(--pine-letter-spacing-185);
   --pine-letter-spacing-heading-2: var(--pine-letter-spacing-171);
   --pine-letter-spacing-heading-3: var(--pine-letter-spacing-157);
